// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should match a snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Welcome
    username=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="welcome-title"
>
          Lost & Found
</h2>,
        <p
          className="welcome-instructions"
>
          Here to help you or your organization track reported lost and found items. Be sure to view existing reports prior to reporting a new item.
</p>,
        <p
          className="welcome-call-to-action"
>
          Please log In to Report/Search
</p>,
      ],
      "className": "welcome-greeting",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lost & Found",
          "className": "welcome-title",
        },
        "ref": null,
        "rendered": "Lost & Found",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Here to help you or your organization track reported lost and found items. Be sure to view existing reports prior to reporting a new item.",
          "className": "welcome-instructions",
        },
        "ref": null,
        "rendered": "Here to help you or your organization track reported lost and found items. Be sure to view existing reports prior to reporting a new item.",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Please log In to Report/Search",
          "className": "welcome-call-to-action",
        },
        "ref": null,
        "rendered": "Please log In to Report/Search",
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="welcome-title"
>
            Lost & Found
</h2>,
          <p
            className="welcome-instructions"
>
            Here to help you or your organization track reported lost and found items. Be sure to view existing reports prior to reporting a new item.
</p>,
          <p
            className="welcome-call-to-action"
>
            Please log In to Report/Search
</p>,
        ],
        "className": "welcome-greeting",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Lost & Found",
            "className": "welcome-title",
          },
          "ref": null,
          "rendered": "Lost & Found",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Here to help you or your organization track reported lost and found items. Be sure to view existing reports prior to reporting a new item.",
            "className": "welcome-instructions",
          },
          "ref": null,
          "rendered": "Here to help you or your organization track reported lost and found items. Be sure to view existing reports prior to reporting a new item.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Please log In to Report/Search",
            "className": "welcome-call-to-action",
          },
          "ref": null,
          "rendered": "Please log In to Report/Search",
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Welcome should match a snapshot with username provided 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Welcome
    username="jon"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Welcome, jon",
      "className": "welcome-greeting",
    },
    "ref": null,
    "rendered": "Welcome, jon",
    "type": "h2",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Welcome, jon",
        "className": "welcome-greeting",
      },
      "ref": null,
      "rendered": "Welcome, jon",
      "type": "h2",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
